--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site wide configuration
 
-title: Site Title
+title: Maaike Sybil Jongen
 locale: en_US
 logo: # filename of a logo image that has been placed into your images directory
 
 # Enter the following platform usernames if you would like for them to appear on your site.
 owner:
-  name: Your Name
+  name: Maaike Sybil Jongen
   avatar: bio-photo.jpg
   bio: "A brief description of yourself."
   email: #emailaddress
